# Projeto_Site

./: main.py  models.py  pyproject.toml
comunidadeimpressionadora/: __init__.py  forms.py  models.py  routes.py
comunidadeimpressionadora/static/: main.css
comunidadeimpressionadora/templates/: base.html  contato.html  criarpost.html  editarperfil.html  home.html  login.html  navbar.html  perfil.html  post.html  usuarios.html
templates/: base.html  contato.html  home.html  login.html  navbar.html
