[project]
name = "projeto-site"
version = "0.1.0"
description = "Projeto site completo com Flask"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.2.0",
    "flask-bcrypt>=1.0.1",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.1",
    "flask>=3.0.3",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
]
